--- a/admin/student/reg.css
+++ b/admin/student/reg.css
@@ -71,7 +71,7 @@
       border-radius: 15px;
       object-fit: cover;
       margin-bottom: 1rem;
-     // border: 4px solid var(--primary);
+     /*border: 4px solid var(--primary);*/
     }
 
     .upload-img {
